--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -53,7 +53,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .userImage {
@@ -81,3 +82,4 @@
     color: #4af0fc;
     background-color: #2d4a4a;
 }
+
